support nested table rendering; update dependencies